# neutron

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/zh/: ecs.md  (+1 more)
neutron/: CMakeLists.txt
neutron/benchmark/: delegate.cpp
neutron/benchmark/src/: archetype.cpp  small_vector.cpp
neutron/include/neutron/: algorithm.hpp  args.hpp  auxiliary.hpp  bare_vector.hpp  concepts.hpp  const_identity.hpp  constants.hpp  constexpr.hpp  coroutine.hpp  dense_map.hpp  ecs.hpp  execution.hpp  execution_resources.hpp  flat_hash_map.hpp  flat_map.hpp  functional.hpp  hive.hpp  identity.hpp  lifo_queue.hpp  lock.hpp  mask.hpp  member_traits.hpp  memory.hpp  meta.hpp  metafn.hpp  neutron.hpp  object_pool.hpp  packet_uint.hpp  pair.hpp  parallel.hpp  pipeline.hpp  poly.hpp  polymorphic.hpp  print.hpp  ranges.hpp  reflection.hpp  shared_tuple.hpp  shift_map.hpp  small_vector.hpp  smvec.hpp  (+11 more)
neutron/include/neutron/detail/: macros.hpp  member_function_traits.hpp  pipeline.hpp
neutron/include/neutron/detail/algorithm/: inplace_merge.hpp
neutron/include/neutron/detail/concepts/: allocator.hpp  awaitable.hpp  map_like.hpp  nothrow_conditional_movable.hpp  trivially_relocatable.hpp  value.hpp
neutron/include/neutron/detail/ecs/: archetype.hpp  basic_commands.hpp  basic_querior.hpp  basic_query.hpp  command_buffer.hpp  construct_from_world.hpp  fwd.hpp  global.hpp  local.hpp  metainfo.hpp  res.hpp  resource.hpp  run.hpp  sync.hpp  task_graph.hpp  world.hpp  world_base.hpp  world_descriptor.hpp  world_schedule.hpp
neutron/include/neutron/detail/ecs/metainfo/: common.hpp  execute.hpp  graph.hpp  sysinfo.hpp
neutron/include/neutron/detail/ecs/world_descriptor/: add_system.hpp  add_systems.hpp  definition.hpp  execute.hpp  fwd.hpp  render.hpp  set_schedule.hpp  standalone.hpp
neutron/include/neutron/detail/execution/: as_awaitable.hpp  completion_signatures.hpp  connect.hpp  default_domain.hpp  domain.hpp  env.hpp  fwd.hpp  fwd_env.hpp  get_domain.hpp  get_scheduler.hpp  inplace_stop_source.hpp  inplace_stop_token.hpp  join_env.hpp  just.hpp  make_sender.hpp  product_type.hpp  queries.hpp  query_with_default.hpp  run_loop.hpp  scheduler.hpp  sender.hpp  sender_adaptor.hpp  sender_adaptor_closure.hpp  set_error.hpp  set_stopped.hpp  set_value.hpp  start.hpp  sync_wait.hpp  task.hpp  then.hpp
neutron/include/neutron/detail/execution/sender_adaptors/: affine_on.hpp  bulk.hpp  continues_on.hpp  schedule_from.hpp  then.hpp  when_all.hpp
neutron/include/neutron/detail/execution/sender_consumers/: sync_wait.hpp
neutron/include/neutron/detail/execution/sender_factories/: just.hpp  just_stopped.hpp
neutron/include/neutron/detail/execution_resources/: normthread.hpp
neutron/include/neutron/detail/iterator/: iter_wrapper.hpp  phony_input_iterator.hpp
neutron/include/neutron/detail/memory/: alloc_traits.hpp  freeable_bytes.hpp  rebind_alloc.hpp  uninitialized_move_if_noexcept.hpp  unique_storage.hpp  using_allocator.hpp
neutron/include/neutron/detail/metafn/: cat.hpp  convert.hpp  definition.hpp  differ.hpp  element.hpp  empty.hpp  export.hpp  expose.hpp  filt.hpp  from.hpp  has.hpp  insert_inplace.hpp  make.hpp  pop.hpp  rebind.hpp  requires.hpp  size.hpp  sort.hpp  specific.hpp  split.hpp  substitute.hpp  unique.hpp
neutron/include/neutron/detail/poly/: concepts.hpp  vtable.hpp
neutron/include/neutron/detail/ranges/: adaptor_closure.hpp  closure.hpp  concepts.hpp  to.hpp
neutron/include/neutron/detail/reflection/: hash.hpp
neutron/include/neutron/detail/tuple/: rmcvref_first.hpp
neutron/include/neutron/detail/type_traits/: same_constness.hpp  same_cv.hpp  same_cvref.hpp
neutron/include/neutron/detail/utility/: as_except_ptr.hpp  compressed_element.hpp  compressed_pair.hpp  const_identity.hpp  exception_guard.hpp  fake_copy.hpp  forward_like.hpp  get.hpp  id_t.hpp  immediately.hpp  make_array.hpp  spreader.hpp
neutron/include/neutron/internal/: allocator.hpp  compressed_element.hpp  const_identity.hpp  elements_view.hpp  exception_guard.hpp  id_t.hpp  macros.hpp  map_like.hpp  mask.hpp  member_function_traits.hpp  range_adaptor_closure.hpp  range_closure.hpp  ranges_to.hpp  tag_invoke.hpp
neutron/src/neutron/internal/: compressed_element.hpp  const_identity.hpp  decompose.hpp  elements_view.hpp  exception_guard.hpp  get.hpp  id_t.hpp  immediately.hpp  macros.hpp  mask.hpp  member_function_traits.hpp  pipeline.hpp  plf_hive.hpp  range_adaptor_closure.hpp  range_closure.hpp  ranges.hpp  ranges_to.hpp  static_thread_pool.hpp
neutron/src/neutron/internal/algorithm/: inplace_merge.hpp
neutron/src/neutron/internal/concepts/: one_of.hpp  pair.hpp  trivially_relocatable.hpp
neutron/src/neutron/internal/execution/: basic_sender.hpp  completion_signatures.hpp  domain.hpp  env.hpp  fwd.hpp  queries.hpp  receiver.hpp  run_loop.hpp  scheduler.hpp  sender_adaptor_closure.hpp  transform.hpp
neutron/src/neutron/internal/iterator/: concepts.hpp
neutron/src/neutron/internal/memory/: freeable_bytes.hpp
neutron/src/neutron/internal/parallel/: lifo_queue.hpp  static_thread_pool.hpp
neutron/src/neutron/internal/poly/: vtable.hpp
neutron/src/neutron/internal/ranges/: adaptor_closure.hpp  closure.hpp  concepts.hpp  to.hpp
neutron/src/neutron/internal/reflection/: hash.hpp
neutron/src/neutron/internal/type_traits/: trivially_relocate.hpp
neutron/src/neutron/internal/utility/: compressed_element.hpp  exception_guard.hpp  get.hpp  spreader.hpp  tag_invoke.hpp
neutron/test/include/: app.hpp  require.hpp  thread_pool.hpp  timer.hpp
neutron/test/src/: archetype.cpp  basic_querior.cpp  decompose.cpp  dense_map.cpp  ecs.cpp  execution.cpp  memory.cpp  pair.cpp  pipeline.cpp  poly.cpp  ranges.cpp  reflection.cpp  shift_map.cpp  signal.cpp  small_vector.cpp  smvec.cpp  sparse_map.cpp  thread.cpp
neutron/test/src/ecs/: app.cpp  desc.cpp  ecs.cpp  execute.cpp  render.cpp
neutron/test/src/execution/: bulk.cpp  continues_on.cpp  just.cpp  task.cpp  then.cpp  when_all.cpp
neutron/test/src/execution_resources/: affinity_thread.cpp  normthread.cpp
(+342 files in other folders)
